@@ -177,7 +177,7 @@ dumpSymInfo(const char *pcName, memmap *memItem)
   for (sym = setFirstItem (memItem->syms); sym; sym = setNextItem (memItem->syms))
     {          
       printf ("   %s, isReqv:%d, reqv:0x%p, onStack:%d, Stack:%d, nRegs:%d, [", 
-              sym->rname, sym->isreqv, sym->reqv, sym->onStack, sym->stack, sym->nRegs);
+              sym->rname, sym->isreqv, (void*)(sym->reqv), sym->onStack, sym->stack, sym->nRegs);
 
       if (sym->reqv)
         {       
